# CDragon

./: .gitignore  C-Server-by-Fransua.drawio  README.md  backup_SRF.sql
CDragon/: CMakeLists.txt  README.md  backup_CDragon.sql
CDragon/CDragon/Framework/include/: base_model.h  http_response.h
CDragon/CDragon/Framework/lib/mysql-connector-c++-9.1.0-macos14-arm64/lib64/: libcrypto.3.dylib  libmysqlcppconn.10.dylib  libmysqlcppconnx.2.dylib
CDragon/CDragon/Framework/src/: main.cpp
CDragon/CDragon/Framework/src/http/: http_request.cpp
CDragon/CDragon/Framework/src/models/: user_model.h
CDragon/CDragon/Framework/src/static/css/: styles.css
CDragon/CDragon/Framework/src/static/js/: script.js
CDragon/CDragon/Framework/src/views/: download_video.html  upload_video.html
CDragon/CDragon/Framework/tests/: http_response.cpp  session_repository.cpp
CDragon/CDragon/Архив/Manager/src/: command_executor.h  command_parser.cpp  command_parser.d  command_parser.h  language_pack.cpp  language_pack.d  language_pack.h  main.cpp  main.d
CDragon/CDragon/Архив/MyApp/: admin.cpp  apps.cpp  forms.cpp  views.cpp
CDragon/CDragon/Архив/MyProject/: asgi.cpp  urls.cpp
CDragon/PasswordHasher/: README.md  main.cpp
CDragon/course_project/Код/Back-end/: CMakeLists.txt  README.md
CDragon/course_project/Код/Back-end/PasswordHasher/: CMakeLists.txt
CDragon/course_project/Код/Back-end/include/: framework.h  http_request.h  http_response.h  router.h
CDragon/course_project/Код/Back-end/include/tests/: test_http_request.cpp  test_http_response.cpp
CDragon/course_project/Код/Back-end/src/: framework.cpp
CDragon/course_project/Код/Back-end/src/http/: http_server.cpp
CDragon/course_project/Код/Back-end/src/models/include/records/: article_category_record.h  article_keyword_record.h  article_tag_record.h  keyword_record.h  user_record.h
CDragon/course_project/Код/Back-end/src/models/include/tables/: article_categories_table.h  article_keywords_table.h  article_tags_table.h  categories_table.h  keywords_table.h  roles_table.h  tags_table.h  user_roles_table.h  users_table.h
CDragon/course_project/Код/Back-end/src/models/include/tables/tests/: test_roles_table.cpp  test_users_table.cpp
CDragon/course_project/Код/Back-end/src/router/: router.cpp  routes.cpp
CDragon/course_project/Код/Back-end/src/views/admin/article_editor/html/: index.html
CDragon/course_project/Код/Back-end/src/views/admin/article_editor/js/: functions.js
CDragon/course_project/Код/Back-end/src/views/admin/login_page/html/: index.html
CDragon/course_project/Код/Back-end/src/views/admin/main_page/css/: sp.css  styles.css
CDragon/course_project/Код/Back-end/src/views/admin/main_page/js/: handlers.js
CDragon/course_project/Код/Back-end/src/views/normal/article_read_page/css/: styles.css
CDragon/course_project/Код/Back-end/src/views/normal/category_page/css/: styles.css
CDragon/course_project/Код/Back-end/src/views/Архив/: test_template.html  upload_video.html
CDragon/course_project/Код/DataBase/: mysql.sql
CDragon/include/: database.h  http_request.h  http_server.h  router.h  routes.h  session_repository.h  template_renderer.h
CDragon/include/tests/: test_template_renderer.cpp
CDragon/lib/mysql-connector-c++-9.1.0-macos14-arm64/: INFO_BIN
CDragon/lib/mysql-connector-c++-9.1.0-macos14-arm64/lib64/: libssl.3.dylib
CDragon/src/: framework.cpp  main.cpp
CDragon/src/http/: http_request.cpp  http_response.cpp  http_server.cpp
CDragon/src/models/: product_model.h
CDragon/src/models/include/base_models/: base_record_model.h  base_table_model.h
CDragon/src/models/include/records/: article_record.h  category_record.h  role_record.h  tag_record.h  user_role_record.h
CDragon/src/models/include/tables/: articles_table.h
CDragon/src/models/include/tables/tests/: test_user_roles_table.cpp
CDragon/src/router/: router.cpp  routes.cpp
CDragon/src/views/: index.html
CDragon/src/views/admin/article_editor/css/: styles.css
CDragon/src/views/admin/article_editor/js/: handlers.js
CDragon/src/views/admin/login_page/css/: style.css
CDragon/src/views/admin/main_page/css/: fp.css
CDragon/src/views/admin/main_page/html/: index.html
CDragon/src/views/admin/main_page/js/: functions.js
CDragon/src/views/normal/article_read_page/html/: index.html
CDragon/src/views/normal/category_page/html/: index.html
CDragon/src/views/normal/main_page/css/: styles.css
CDragon/src/views/normal/main_page/html/: index.html
CDragon/src/views/Архив/: download_video.html
CDragon/tests/: http_request.cpp  router.cpp
future_plans/CDragon2.0/Manager/output/: main
future_plans/CDragon2.0/Manager/src/: command_executor.cpp  command_executor.d  config.txt
future_plans/CDragon2.0/MyApp/: models.cpp  tests.cpp  urls.cpp
future_plans/CDragon2.0/MyProject/: settings.cpp  wsgi.cpp
